--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,10 +7,7 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
+    - name: Projects
     url: '#projects'
     weight: 30
   - name: Talks
@@ -25,6 +22,7 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+
+ - name: CV
+ - url: uploads/resume.pdf
+ - weight: 70
