--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   - name: My Publications 
     url: '#my-pubs'
     weight: 40
-  - name: Talks 
+  - name: Conference Presentations  
     url: '#talks'
     weight: 50
 
