--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,10 +8,10 @@ main:
     url: '#about'
     weight: 10
   - name: Research Projects
-    url: '#research-projects'
+    url: '#projects'
     weight: 30
   - name: My Publications 
-    url: '#my-pubs'
+    url: '#featured'
     weight: 40
   - name: Conference Presentations  
     url: '#talks'
