--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -3,6 +3,7 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
+
 main:
   - name: Home
     url: '#about'
@@ -10,12 +11,15 @@ main:
   - name: Research Projects
     url: '#projects'
     weight: 30
-  - name: My Publications 
-    url: '#featured'
-    weight: 40
-  - name: Conference Presentations  
+  - name: Talks  
     url: '#talks'
+    weight: 40
+  - name: Publications 
+    url: '#featured'
     weight: 50
+  - name: Contact 
+    url: '#contact'
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
