--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -36,7 +36,7 @@ outputs:
   home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
   section: [HTML, RSS]
 imaging:
-  resampleFilter: MitchellNetravali
+  resampleFilter: Box
   quality: 100
   anchor: smart
 timeout: 600000
